--- a/Views/Shared/ProjectCreate.cshtml
+++ b/Views/Shared/ProjectCreate.cshtml
@@ -41,5 +41,6 @@
            asp-route-staffTableFilter="@Model.filterStaff"
              asp-route-recipientProjectFilter="@Model.filterResProj"
             asp-route-supervisorProjectFilter="@Model.filterSupProj"
-            asp-route-porjectFiltr="@Model.filterProj"/>
+            asp-route-porjectFiltr="@Model.filterProj"
+           asp-route-filterTaskTable="@Model.filterTaskTable"/>
 </form>
