--- a/Views/Shared/ProjectWatcht.cshtml
+++ b/Views/Shared/ProjectWatcht.cshtml
@@ -15,7 +15,8 @@
            asp-route-staffTableFilter="@Model.filterStaff"
              asp-route-recipientProjectFilter="@Model.filterResProj"
             asp-route-supervisorProjectFilter="@Model.filterSupProj"
-            asp-route-porjectFiltr="@Model.filterProj"/>}
+            asp-route-porjectFiltr="@Model.filterProj"
+            asp-route-filterTaskTable="@Model.filterTaskTable"/>}
     else
     { <input class="btn-white btn-top" type="submit" value="Редактировать"
              asp-controller="Home" asp-action="TaskTable"
@@ -25,7 +26,8 @@
            asp-route-staffTableFilter="@Model.filterStaff"
              asp-route-recipientProjectFilter="@Model.filterResProj"
             asp-route-supervisorProjectFilter="@Model.filterSupProj"
-            asp-route-porjectFiltr="@Model.filterProj"/>}
+            asp-route-porjectFiltr="@Model.filterProj"
+             asp-route-filterTaskTable="@Model.filterTaskTable"/>}
 
     <label>В архиве</label>
     <input id="statusId" disabled class="form-control" value="@Model.redactedProject.archive" />
