--- a/Views/Shared/TaskRedact.cshtml
+++ b/Views/Shared/TaskRedact.cshtml
@@ -14,7 +14,8 @@
            asp-route-staffTableFilter="@Model.filterStaff"
            asp-route-recipientProjectFilter="@Model.filterResProj"
            asp-route-supervisorProjectFilter="@Model.filterSupProj"
-           asp-route-porjectFiltr="@Model.filterProj" />
+           asp-route-porjectFiltr="@Model.filterProj"
+           asp-route-filterTaskTable="@Model.filterTaskTable"/>
     @{
         var liteTask = Model.redactedTask.liteTask == false ? "Задача" : "Задача вне очереди";
     }
@@ -229,6 +230,7 @@
            asp-route-staffTableFilter="@Model.filterStaff"
            asp-route-recipientProjectFilter="@Model.filterResProj"
            asp-route-supervisorProjectFilter="@Model.filterSupProj"
-           asp-route-porjectFiltr="@Model.filterProj" />
+           asp-route-porjectFiltr="@Model.filterProj" 
+           asp-route-filterTaskTable="@Model.filterTaskTable"/>
 
 </form>
